--- a/about.html
+++ b/about.html
@@ -6,35 +6,39 @@
     <title>Layla's Pallette</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Fredoka+One&display=swap');
+
         body {
             font-family: 'Comic Neue', cursive;
             background-color: #ffebcd; /* Blanched Almond background */
             color: #333;
             margin: 0;
             padding: 0;
-            text-align: center; /* Center all text */
+            text-align: center;
         }
+
         header {
             background-color: #ff69b4; /* Hot Pink header */
             color: #fff;
             padding: 10px 0;
             animation: fadeIn 1.5s ease-in-out;
-            
         }
+
         header h1 {
             font-family: 'Trebuchet MS', sans-serif;
             margin: 20px 0 0;
-        }    
         }
+
         header img {
             display: block;
             margin: 0 auto;
         }
+
         nav {
             display: flex;
             justify-content: center;
             background-color: #ffb6c1; /* Light Pink for nav */
         }
+
         nav a {
             color: #fff;
             padding: 14px 20px;
@@ -43,22 +47,27 @@
             font-weight: bold;
             transition: background-color 0.4s ease, transform 0.4s ease;
         }
+
         nav a:hover {
             background-color: #ff69b4; /* Hot Pink on hover */
             transform: scale(1.1);
         }
+
         .container {
             padding: 20px;
             animation: slideIn 1.2s ease-out;
-            text-align: left; /* Left-align container text */
+            text-align: left;
         }
+
         .container h2 {
-            color: #ff69b4; /* Hot Pink heading color */
-            text-shadow: 2px 2px #ffb6c1; /* Subtle shadow */
+            color: #ff69b4;
+            text-shadow: 2px 2px #ffb6c1;
         }
+
         .container p {
-            line-height: 1.6; /* Improved readability */
+            line-height: 1.6;
         }
+
         footer {
             background-color: #ff69b4;
             color: #fff;
@@ -70,27 +79,19 @@
             opacity: 1;
             transition: opacity 0.7s;
         }
+
         footer:hover {
             opacity: 0.10;
         }
-        /* Animations */
+
         @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
+
         @keyframes slideIn {
-            from {
-                transform: translateY(50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
@@ -102,13 +103,16 @@
         <h1>Layla's Pallette</h1>
         <p><b>"Delicious homemade baked goods"</b></p>
     </header>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="menu.html">Menu</a>
+        <a href="order.html">Order</a>
         <a href="pictures.html">Pictures</a>
         <a href="contact.html">Contact Us</a>
     </nav>
+
     <div class="container">
         <h2>My Story</h2>
         <p>Hello! My name is Layla Thompson, and I’m the owner of Layla's Pallette. At Layla's Pallette, we’re all about making a bunch of different baked goods that everyone will love. We have tasty cookies, yummy brownies, light muffins, and even treats that don’t have eggs, all made with a lot of care and creativity.</p>
@@ -119,6 +123,7 @@
 
         <p>Thanks for checking out Layla's Pallette! I hope you’ll give our baked goods a try and find something you really like.</p>
     </div>
+
     <footer>
         <p>&copy; 2024 Layla's Pallette. All rights reserved.</p>
     </footer>
