--- a/pictures.html
+++ b/pictures.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pictures - Layla's Pallette</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Fredoka+One&display=swap');
         body {
             font-family: 'Comic Neue', cursive;
-            background-color: #ffebcd; /* Blanched Almond background */
+            background-color: #ffebcd; /* Blanched Almond */
             color: #333;
             margin: 0;
             padding: 0;
-            text-align: center; /* Center all text */
+            text-align: center;
         }
         header {
-            background-color: #ff69b4; /* Hot Pink header */
+            background-color: #ff69b4; /* Hot Pink */
             color: #fff;
             padding: 10px 0;
             animation: fadeIn 1.5s ease-in-out;
-            
         }
         header h1 {
             font-family: 'Trebuchet MS', sans-serif;
             margin: 20px 0 0;
-        }    
         }
-        
         header img {
             display: block;
             margin: 0 auto;
@@ -34,7 +31,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #ffb6c1; /* Light Pink for nav */
+            background-color: #ffb6c1; /* Light Pink */
         }
         nav a {
             color: #fff;
@@ -44,42 +41,44 @@
             transition: background-color 0.4s ease, transform 0.4s ease;
         }
         nav a:hover {
-            background-color: #ff69b4; /* Hot Pink on hover */
-            transform: scale(1.1); /* Slight scaling effect */
+            background-color: #ff69b4; /* Hot Pink */
+            transform: scale(1.1);
         }
         .container {
             padding: 20px;
+            padding-bottom: 60px; /* prevent footer overlap */
             animation: slideIn 1.2s ease-out;
+            text-align: left; /* Align text left inside container */
+            max-width: 900px;
+            margin: auto;
         }
         .container h2 {
-            color: #ff69b4; /* Hot Pink heading color */
-            text-shadow: 2px 2px #ffb6c1; /* Subtle shadow */
-            text-align: left; /* Align the heading to the left */
-            margin-left: 10px; /* Add space to the left */
+            color: #ff69b4;
+            text-shadow: 2px 2px #ffb6c1;
+            margin-left: 10px;
         }
         .container p {
-            line-height: 1.6; /* Improved readability */
-            text-align: left; /* Align the paragraph text to the left */
-            margin-left: 20px; /* Optional: Add some left margin for spacing */
+            line-height: 1.6;
+            margin-left: 20px;
         }
         .gallery {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* Center the images horizontally */
-            gap: 20px; /* Space between the images */
+            justify-content: center;
+            gap: 20px;
             margin-top: 20px;
         }
         .gallery img {
-            width: 150px; /* Set the image size */
-            height: 150px; /* Set the image size */
-            object-fit: cover; /* Maintain aspect ratio */
-            border-radius: 15%; /* Make the images round */
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 15%;
             transition: transform 0.5s ease, box-shadow 0.3s ease;
         }
         .gallery img:hover {
-            transform: scale(1.1); /* Popping effect */
-            box-shadow: 0 8px 20px rgba(255, 105, 180, 0.8); /* Glowing effect */
-            outline: 4px solid rgba(255, 182, 193, 0.8); /* Light Pink border */
+            transform: scale(1.1);
+            box-shadow: 0 8px 20px rgba(255, 105, 180, 0.8);
+            outline: 4px solid rgba(255, 182, 193, 0.8);
         }
         footer {
             background-color: #ff69b4;
@@ -93,25 +92,29 @@
             transition: opacity 0.7s;
         }
         footer:hover {
-            opacity: 0.10;
+            opacity: 0.1;
         }
         /* Animations */
         @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         @keyframes slideIn {
-            from {
-                transform: translateY(50px);
-                opacity: 0;
+            from { transform: translateY(50px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        /* Responsive for mobile */
+        @media (max-width: 480px) {
+            .gallery img {
+                width: 100px;
+                height: 100px;
             }
-            to {
-                transform: translateY(0);
+            footer {
+                position: static;
                 opacity: 1;
+            }
+            .container {
+                padding-bottom: 20px;
             }
         }
     </style>
